--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://girish0909.github.io/my-app",
+  "homepage": "https://girish0909.github.io/Text-tools",
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
